--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,7 +31,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Segoe UI,SegoeUI,Helvetica Neue,Helvetica,Arial,sans-serif";
   font-size: 24px;
   line-height: 1.5;
   color: $body-text-color;
